remove legacy overrides (fix whitespace)

--- a/app/assets/stylesheets/_app/_destinations/_landing.sass
+++ b/app/assets/stylesheets/_app/_destinations/_landing.sass
@@ -14,7 +14,7 @@ $top-ten__list__height: 100px
 
 html
   overflow-y: scroll
-  
+
 .icon--pen
   width: 27px
   height: 27px
@@ -247,7 +247,7 @@ html
   @if $is-ie == true
     &:hover
       background-color: $section--cities
-    
+
 .top-ten__list
   list-style-type: none
   +respond-to(medium-view)
@@ -325,13 +325,12 @@ html
     padding-top: 30px
     text-shadow: 0 1px 1px rgba(0,0,0,0.5)
 
-
 .top-ten__list__item__link
   background-color: rgba(20,43,68, 0.15)
   +transition(background-color,0.25,ease-out)
   &:hover
     background-color: rgba(20,43,68, 0.35)
-    text-decoration: none   
+    text-decoration: none
   +respond-to(wide-view)
     height: 100%
     width: 100%
@@ -379,7 +378,7 @@ html
 .bit-map__compeition-callout
   @if $is-ie == true
     display: none
-    
+
   @if $is-ie == false
     @extend %image-replacement
     width: 249px
@@ -404,10 +403,3 @@ html
 
 .carousel__contents-wrapper
   height: 100%
-
-
-
-//$$legacy Overrides - delete when we move the icons to svg
-
-.icon--article--white--before:before
-  height: 33px
